--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+<body>  
+    <h1>Привет Мир!</h1>    
 </body>
 </html>
