Все еще первоначальный вариант
Все еще первоначальный вариант

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
         <p class="popup__text">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</p>
         <textarea class="popup__textarea" placeholder="Может, больше рецептов?"></textarea>
-        <!--   Исправить класс     -->
         <button class="popup__submit" type="submit" name="submit">Отправить</button>
       </form>
     </section>
@@ -42,9 +41,7 @@
   <!-- POPUP END -->
 
   <header class="header">
-    <div class="menu__button">
-      <span></span>
-    </div>
+    <div class="menu__button">&#9776</div>
     <div class="header__navigation">
       <a href="#0"><img src="svg/noemi-logo.svg" alt="Логотип NOEMI" class="header__logo"></a>
       <nav>
