--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li><a class="trends__tag" href="#0">Health</a></li>
           </ul>
           <h2 class="headline trend__headline"><a href="#0" class="trend__headline_link">Сейчас в тренде: сколько
-              витамина С в лимонах<a></h2>
+              витамина С в лимонах</a></h2>
         </div>
       </div>
     </div>
