--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- POPUP  -->
     <div class="popup-hidden">
       <section class="popup__section">
-        <div class="headline section__headline">Ваш фидбек</div>
+        <h2 class="headline section__headline">Ваш фидбек</h2>
         <a class="close-button" href="#">&times</a>
         <form>
           <p class="popup__text">Как часто вы заходите на сайт?</p>
@@ -349,8 +349,8 @@
         <div class="products__item">
           <header class="products__image">
             <picture>
-              <source media="(min-width:768px) and (max-width:1199px)" srcset="img/shop-item-tablet1.jpg">
-              <source media="(min-width:1200px)" srcset="img/shop-item-desk1.jpg">
+              <source media="(min-width: 641px) and (max-width: 1199px)" srcset="img/shop-item-tablet1.jpg">
+              <source media="(min-width: 1200px)" srcset="img/shop-item-desk1.jpg">
               <img src="img/shop-item-mobile1.jpg" alt="Подушка с модным принтом">
             </picture>
           </header>
@@ -375,8 +375,8 @@
         <div class="products__item">
           <header class="products__image">
             <picture>
-              <source media="(min-width:768px) and (max-width:1199px)" srcset="img/shop-item-tablet2.jpg">
-              <source media="(min-width:1200px)" srcset="img/shop-item-desk2.jpg">
+              <source media="(min-width: 641px) and (max-width: 1199px)" srcset="img/shop-item-tablet2.jpg">
+              <source media="(min-width: 1200px)" srcset="img/shop-item-desk2.jpg">
               <img src="img/shop-item-mobile2.jpg" alt="Рукодельная кукла «Зайчик»">
             </picture>
           </header>
@@ -384,7 +384,7 @@
             <div class="products__text">
               <h4 class="headline products__headline">Кукла «Зайчик»</h4>
               <p>Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="text__link"
-                                                                                       href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+                href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
             </div>
             <footer class="purchase-info">
               <div class="price-info">
@@ -399,8 +399,8 @@
         <div class="products__item">
           <header class="products__image">
             <picture>
-              <source media="(min-width:768px) and (max-width:1199px)" srcset="img/shop-item-tablet3.jpg">
-              <source media="(min-width:1200px)" srcset="img/shop-item-desk3.jpg">
+              <source media="(min-width: 641px) and (max-width: 1199px)" srcset="img/shop-item-tablet3.jpg">
+              <source media="(min-width: 1200px)" srcset="img/shop-item-desk3.jpg">
               <img src="img/shop-item-mobile3.jpg" alt="Шестиугольная рамка">
             </picture>
           </header>
@@ -408,8 +408,7 @@
             <div class="products__text">
               <h4 class="headline products__headline">Шестиугольная рамка</h4>
               <p>Необычная рамка для украшения дома из видео <a class="text__link" href="#0">«Как сделать рамку из
-                подручных
-                средств за 30 минут»</a></p>
+                подручных средств за 30 минут»</a></p>
             </div>
             <footer class="purchase-info">
               <div class="price-info">
